--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
   "devDependencies": {
     "common-tags": "1.8.0",
     "cypress": "3.4.1"
+  },
+  "dependencies": {
+    "cypress-pipe": "1.5.0"
   }
 }
