--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "cypress-pipe": "1.5.0",
     "semantic-release": "15.13.24"
   },
-  "dependencies": {},
+  "dependencies": {
+    "nano-markdown": "1.2.0"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/cypress-io/cypress-fiddle.git"
