--- a/package.json
+++ b/package.json
@@ -20,12 +20,13 @@
   "author": "Gleb Bahmutov <gleb@cypress.io>",
   "license": "MIT",
   "devDependencies": {
-    "common-tags": "1.8.0",
     "cypress": "3.4.1",
     "cypress-pipe": "1.5.0",
     "semantic-release": "15.13.24"
   },
   "dependencies": {
+    "@textlint/markdown-to-ast": "6.1.5",
+    "common-tags": "1.8.0",
     "safe-marked": "2.0.0"
   },
   "repository": {
