--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
     "semantic-release": "15.13.24"
   },
   "dependencies": {
+    "@cypress/browserify-preprocessor": "2.1.1",
     "@textlint/markdown-to-ast": "6.1.5",
     "common-tags": "1.8.0",
-    "safe-marked": "2.0.0"
+    "safe-marked": "2.0.0",
+    "temp-write": "4.0.0"
   },
   "repository": {
     "type": "git",
