--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "scripts": {
     "test": "cypress run",
     "cy:open": "cypress open",
+    "cy:run": "cypress run",
     "semantic-release": "semantic-release"
   },
   "keywords": [
