--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "scripts": {
     "test": "cypress run",
     "cy:open": "cypress open",
+    "cy:run": "cypress run",
     "semantic-release": "semantic-release"
   },
   "keywords": [
@@ -20,13 +21,17 @@
   "author": "Gleb Bahmutov <gleb@cypress.io>",
   "license": "MIT",
   "devDependencies": {
-    "common-tags": "1.8.0",
     "cypress": "3.4.1",
     "cypress-pipe": "1.5.0",
     "semantic-release": "15.13.24"
   },
   "dependencies": {
-    "safe-marked": "2.0.0"
+    "@cypress/browserify-preprocessor": "2.1.1",
+    "@textlint/markdown-to-ast": "6.1.5",
+    "common-tags": "1.8.0",
+    "debug": "4.1.1",
+    "safe-marked": "2.0.0",
+    "temp-write": "4.0.0"
   },
   "repository": {
     "type": "git",
