--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "test": "cypress run",
     "cy:open": "cypress open",
     "cy:run": "cypress run",
+    "cy:md": "cypress open --config-file cypress-markdown.json",
     "semantic-release": "semantic-release"
   },
   "keywords": [
