back to npx cypress run

--- a/circle.yml
+++ b/circle.yml
@@ -9,5 +9,5 @@ workflows:
             - run: 'echo "//registry.npmjs.org/:_authToken=${NPM_TOKEN}" > ~/.npmrc'
           no-workspace: true
           post-steps:
-            - run: npm run cy:md
+            - run: npx cypress run --config-file cypress-markdown.json
             - run: npm run semantic-release
