feat: add export to JS with visit hook

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   "dependencies": {
     "@cypress/browserify-preprocessor": "2.1.4",
     "@textlint/markdown-to-ast": "6.1.7",
+    "arg": "4.1.3",
     "common-tags": "1.8.0",
     "debug": "4.1.1",
     "safe-marked": "3.0.0",
