--- a/circle.yml
+++ b/circle.yml
@@ -5,8 +5,7 @@ workflows:
   build:
     jobs:
       - cypress/run:
-          pre-steps:
-            - run: 'echo "//registry.npmjs.org/:_authToken=${NPM_TOKEN}" > ~/.npmrc'
+          executor: cypress/base:12
           no-workspace: true
           post-steps:
             - run: npx cypress run --config-file cypress-markdown.json
