--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "devDependencies": {
     "cypress": "5.2.0",
     "cypress-pipe": "1.7.0",
+    "prettier": "2.1.2",
     "semantic-release": "15.14.0"
   },
   "dependencies": {
