--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "license": "MIT",
   "devDependencies": {
     "cypress": "5.3.0",
+    "cypress-expect": "2.1.2",
     "cypress-pipe": "1.7.0",
     "prettier": "2.1.2",
     "semantic-release": "15.14.0"
