--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "cy:open": "cypress open",
     "cy:run": "cypress run",
     "cy:md": "cypress open --config-file cypress-markdown.json",
+    "cy:components": "DEBUG=@cypress/fiddle cypress open --config-file cypress-component.json",
     "semantic-release": "semantic-release"
   },
   "keywords": [
@@ -30,7 +31,12 @@
     "cypress-expect": "2.1.2",
     "cypress-pipe": "1.7.0",
     "prettier": "2.1.2",
-    "semantic-release": "15.14.0"
+    "semantic-release": "15.14.0",
+    "babel-loader": "8.1.0",
+    "cypress-react-unit-test": "4.16.5",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "webpack": "4.44.2"
   },
   "dependencies": {
     "@cypress/browserify-preprocessor": "2.2.4",
