--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "test": "cypress run",
     "cy:open": "cypress open",
     "cy:run": "cypress run",
-    "cy:md": "cypress open --config-file cypress-markdown.json",
+    "cy:md": "cypress open --config-file cypress-markdown.config.js",
     "semantic-release": "semantic-release"
   },
   "keywords": [
