--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   "author": "Gleb Bahmutov <gleb@cypress.io>",
   "license": "MIT",
   "devDependencies": {
-    "cypress": "10.5.0",
+    "cypress": "^10.7.0",
     "cypress-expect": "2.5.2",
     "cypress-pipe": "1.7.0",
     "prettier": "2.2.1",
